--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -10,23 +10,57 @@
         <button class="btn btn-sm btn-success" type="button"
         @onclick="UploadFiles">Upload</button>
         <br />
+        <br />
+        @{
+            var progressCss = "progress" + (displayProgress ? "" : "d-none");
+            var progressWithStyle = progressPercent + "%";
+        }
+        <div class="@progressCss">
+            <div class="progress-bar" role="progressbar" style="@progressWithStyle" area-valuenow="@progressPercent"
+            area-minvalue="0" area-maxvalue="100">
+
+            </div>
+        </div>
     </div>
     <br />
     <label>@labelText</label>
 </div>
+@if(previewImages.Count > 0)
+{
+    <h3>Selected Files</h3>
+    <div class="card">
+        <div class="row align-items-start">
+            @foreach(var item in previewImages)
+            {
+                <div class="col-2">
+                    <img class="rounded float-left" src="@item" width="100" height="100" />
+                </div>
 
+            }
+        </div>
+    </div>
+}
 
 
 @code{
-    IReadOnlyList<IBrowserFile> selectedFiles;
+    private bool displayProgress;
+    private int progressPercent;
 
+
+    IReadOnlyList<IBrowserFile> selectedFiles;
+    private IList<string> previewImages = new List<string>();
 
     private string labelText = "";
 
-    private void OnInputFileChange(InputFileChangeEventArgs e)
+    private async Task OnInputFileChange(InputFileChangeEventArgs e)
     {
         selectedFiles = new List<IBrowserFile>();
         selectedFiles = e.GetMultipleFiles();
+        foreach(var file in selectedFiles)
+        {
+            var imageUrl = await fileUpload.GeneratePreviewUrl(file);
+            previewImages.Add(imageUrl);
+        }
     }
 
     private async Task UploadFiles()
@@ -35,11 +69,19 @@
         {
             if(selectedFiles is not null && selectedFiles.Count > 0)
             {
+                var uploaded = 0;
+                displayProgress = true;
+
                 foreach(var file in selectedFiles)
                 {
                     await fileUpload.UploadFile(file);
+                    uploaded++;
+                    progressPercent = (int)((uploaded / selectedFiles.Count) * 100);
 
                 }
+
+                displayProgress = false;
+
                 labelText = $"Upload of {selectedFiles.Count} files succesful!";
             }
         }catch(Exception ex)
